--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2087,7 +2087,7 @@ html.homepage .footer {
   height: 15px;
   border-left: 1px solid var(--ink);
   border-bottom: 1px solid var(--ink);
-  margin: 0 -1px 3px 0;
+  margin: 0 -1px -1px 0;
 }
 
 .service__corner .btn--arrow {
